force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Hierarchy__c/agf__QA_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>Stores the hierarchies of all test cases for increased performance.</description>
    <label>Hierarchy</label>
    <nameField>
        <label>Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>