force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Hierarchy__c/fields/agf__Count__c.field-meta.xml
<CustomField>
    <fullName>agf__Count__c</fullName>
    <label>Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>