force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Hierarchy__c/fields/agf__Depth__c.field-meta.xml
<CustomField>
    <fullName>agf__Depth__c</fullName>
    <label>Depth</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>