force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Hierarchy__c/fields/agf__Full_Path__c.field-meta.xml
<CustomField>
    <fullName>agf__Full_Path__c</fullName>
    <externalId>true</externalId>
    <label>Full Path</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>